cmake_minimum_required(VERSION 4.0)
project(C__)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(io_test)
add_subdirectory(type_cast)
add_subdirectory(cite)
add_subdirectory(func_args)
add_subdirectory(const)
add_subdirectory(string)
add_subdirectory(class)
add_subdirectory(constructor)
add_subdirectory(destructor)
add_subdirectory(static)
add_subdirectory(lifecycle)