cmake_minimum_required(VERSION 4.0)
project(C__)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(io_test)
add_subdirectory(stream)
add_subdirectory(type_cast)
add_subdirectory(cite)
add_subdirectory(func_args)
add_subdirectory(const)
add_subdirectory(string)
add_subdirectory(class)
add_subdirectory(constructor)
add_subdirectory(destructor)
add_subdirectory(static)
add_subdirectory(lifecycle)
add_subdirectory(friend)
add_subdirectory(operator)
add_subdirectory(extend)
add_subdirectory(multipleExtend)
add_subdirectory(copyConstructor)
add_subdirectory(IncludeClass)
add_subdirectory(PointTransform)
add_subdirectory(virtual)
add_subdirectory(file)
add_subdirectory(template)